EXTRA_DIST = \
		CDasherIM.cpp \
		CDasherIM.h \
		CDasherIM.rgs \
		DasherIM.cpp \
		DasherIM.def \
		DasherIM.h \
		DasherIM_i.c \
		DasherIM.idl \
		DasherIM_p.c \
		DasherIMppc.aps \
		DasherIMppc.rc \
		DasherIM.rc2 \
		DasherIM.rgs \
		DasherIM.vcproj \
		dlldata.c \
		IMContainer.cpp \
		IMContainer.h \
		ReadMe.txt \
		resourceppc.h \
		stdafx.cpp \
		stdafx.h
