noinst_LIBRARIES = libdashergtk.a
libdashergtk_a_SOURCES = GtkDasherCanvas.h GtkDasherEdit.h GtkDasherPane.h GtkDasherWindow.h GtkDoubleBuffer.h GtkDasherCanvas.cc GtkDasherEdit.cc GtkDasherPane.cc GtkDasherWindow.cc GtkDoubleBuffer.cc GtkDasherSave.h GtkDasherSave.cc GtkDasherStore.h GtkDasherStore.cc
CXXFLAGS = $(GTKMM_CFLAGS) -I../DasherCore
