AC_PREREQ(2.56)
AC_INIT([dasher_test],[0.0.1],[dasher@mrao.cam.ac.uk])
AC_REVISION([$Id: configure.in,v])
AC_CONFIG_SRCDIR(LanguageModelling/pjc51_main.cpp)
AM_INIT_AUTOMAKE([foreign])

AC_CHECK_LIB(expat, XML_Parse,, AC_MSG_ERROR([Expat library not found.]))
AC_CHECK_LIB(gslcblas,main)
AC_CHECK_LIB(gsl,main)
AC_CHECK_LIB(lemur,main,,AC_MSG_ERROR([LEMUR library not found.]))

AC_PROG_CXX

AC_OUTPUT([Makefile LanguageModelling/Makefile])

