EXTRA_DIST = \
		Common/DasherEncodingToCP.cpp \
		Common/DasherEncodingToCP.h \
		Common/StringUtils.h \
		Common/WinCommon.h \
		Common/WinHelper.cpp \
		Common/WinHelper.h \
		Common/WinLocalisation.cpp \
		Common/WinLocalisation.h \
		Common/WinMenus.cpp \
		Common/WinMenus.h \
		Common/WinOptions.cpp \
		Common/WinOptions.h \
		Common/WinUTF8.cpp \
		Common/WinUTF8.h \
		Common/WinWrap.cpp \
		Common/WinWrap.h \
		GDI/FontStore.cpp \
		GDI/FontStore.h \
		Sockets/SocketInput.cpp \
		Sockets/SocketInput.h \
		TabletPC/CursorInRange.cpp \
		TabletPC/CursorInRange.h \
		TabletPC/InkCollectorEvents.cpp \
		TabletPC/InkCollectorEvents.h \
		TabletPC/SystemInfo.h \
		Widgets/AboutBox.h \
		Widgets/AdvancedPage.cpp \
		Widgets/AdvancedPage.h \
		Widgets/AlphabetBox.cpp \
		Widgets/AlphabetBox.h \
		Widgets/Canvas.cpp \
		Widgets/Canvas.h \
		Widgets/ColourBox.cpp \
		Widgets/ColourBox.h \
		Widgets/ControlPage.cpp \
		Widgets/ControlPage.h \
		Widgets/Edit.cpp \
		Widgets/Edit.h \
		Widgets/FilenameGUI.cpp \
		Widgets/FilenameGUI.h \
		Widgets/GameGroup.cpp \
		Widgets/GameGroup.h \
		Widgets/KeyControl.cpp \
		Widgets/KeyControl.h \
		Widgets/LMPage.cpp \
		Widgets/LMPage.h \
		Widgets/Menu.cpp \
		Widgets/Menu.h \
		Widgets/Panel.cpp \
		Widgets/Panel.h \
		Widgets/Prefs.cpp \
		Widgets/Prefs.h \
		Widgets/PrefsPageBase.cpp \
		Widgets/PrefsPageBase.h \
		Widgets/Screen.cpp \
		Widgets/Screen.h \
		Widgets/Screen.inl \
		Widgets/Slidebar.cpp \
		Widgets/Slidebar.h \
		Widgets/SocketPage.cpp \
		Widgets/SocketPage.h \
		Widgets/SplashScreen.cpp \
		Widgets/SplashScreen.h \
		Widgets/Splitter.cpp \
		Widgets/Splitter.h \
		Widgets/StatusControl.cpp \
		Widgets/StatusControl.h \
		Widgets/Toolbar.cpp \
		Widgets/Toolbar.h \
		Widgets/ViewPage.cpp \
		Widgets/ViewPage.h \
		Widgets/WindowSelect.cpp \
		Widgets/WindowSelect.h \
		ActionSpeech.cpp \
		ActionSpeech.h \
		AppSettings.cpp \
		AppSettings.h \
		BTSocketInput.cpp \
		BTSocketInput.h \
		ButtonPrefs.cpp \
		ButtonPrefs.h \
		CopyAllLarge.bmp \
		CopyAllSmall.bmp \
		Dasher.cpp \
		Dasher.dsp \
		Dasher.dsw \
		Dasher.h \
		Dasher.ico \
		Dasher.rc \
		Dasher.sln \
		Dasher.vcproj \
		DasherAction.h \
		DasherControl.vcproj \
		DasherControl_vc80.vcproj \
		DasherMouseInput.cpp \
		DasherMouseInput.h \
		DasherWindow.cpp \
		DasherWindow.h \
		Dasher_vc80.sln \
		Dasher_vc80.vcproj \
		EditWrapper.cpp \
		EditWrapper.h \
		GameModeHelper.cpp \
		GameModeHelper.h \
		KeyboardHelper.cpp \
		KeyboardHelper.h \
		ModuleControl.cpp \
		ModuleControl.h \
		ModuleControlBool.cpp \
		ModuleControlBool.h \
		ModuleControlLong.cpp \
		ModuleControlLong.h \
		ModuleControlLongSpin.cpp \
		ModuleControlLongSpin.h \
		ModuleControlString.cpp \
		ModuleControlString.h \
		ModuleSettings.cpp \
		ModuleSettings.h \
		WinMain.cpp \
		resource.h 
