include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_MODULE = dasher
DOC_ENTITIES =
DOC_INCLUDES = 
DOC_FIGURES = figures/figure2.png \
	      figures/main.png \
	      figures/prefs1.png \
	      figures/prefs2.png \
	      figures/prefs3.png \
	      figures/prefs4.png \
	      figures/prefs5.png 

DOC_LINGUAS = 
