include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_MODULE = dasher
DOC_ENTITIES =
DOC_INCLUDES = 
DOC_FIGURES = figures/figure2.png \
	      figures/main.png \
	      figures/prefs1.png \
	      figures/prefs2.png \
	      figures/prefs3.png \
	      figures/prefs4.png \
	      figures/prefs5.png \
              figures/a-z.gif \
              figures/aa-az.gif \
              figures/ala-alz.gif \
              figures/object.gif \
              figures/exampleHad2.png \
              figures/exampleHad2a.png \
              figures/exampleHad3a.png \
              figures/exampleHad4.png

DOC_LINGUAS = ca de el en_GB es eu fr oc ru sv

