@YELP_HELP_RULES@

HELP_ID =	dasher
HELP_FILES =	dasher.xml
HELP_MEDIA =    figures/figure2.png \
		figures/main.png \
		figures/prefs1.png \
		figures/prefs2.png \
		figures/prefs3.png \
		figures/prefs4.png \
		figures/prefs5.png \
		figures/a-z.gif \
		figures/aa-az.gif \
		figures/ala-alz.gif \
		figures/object.gif \
		figures/exampleHad2.png \
		figures/exampleHad2a.png \
		figures/exampleHad3a.png \
		figures/exampleHad4.png

HELP_LINGUAS =	ca cs de el en_GB es eu fr oc ro ru sl sv zh_CN
