EXTRA_DIST = \
		Dasher.htm \
		EULA.txt \
		README.txt \
		dasher1.b2p \
		dasher1.gif \
		dasher10.gif \
		dasher11.gif \
		dasher12.gif \
		dasher13.gif \
		dasher2.b2p \
		dasher2.gif \
		dasher20.gif \
		dasher21.gif \
		dasher3.b2p \
		dasher3.gif \
		dasher30.gif \
		dasher4.b2p \
		dasher4.gif \
		dasher40.gif \
		dasher41.gif \
		dasher42.gif \
		dasher5.b2p \
		dasher5.gif \
		dasher50.gif \
		dasher51.gif \
		dasher52.gif \
		pointer.gif \
		pointer2.gif \
		source.txt
