noinst_LIBRARIES = libdasherlm.a

libdasherlm_a_SOURCES = \
		CTWLanguageModel.cpp \
		CTWLanguageModel.h \
		DictLanguageModel.cpp \
		DictLanguageModel.h \
		HashTable.cpp \
		HashTable.h \
		LanguageModel.h \
		MixtureLanguageModel.h \
		PPMLanguageModel.cpp \
		PPMLanguageModel.h \
		PPMPYLanguageModel.cpp \
		PPMPYLanguageModel.h \
		WordLanguageModel.cpp \
		WordLanguageModel.h
