noinst_LTLIBRARIES = libdasherlm.la

libdasherlm_la_SOURCES = \
		CTWLanguageModel.cpp \
		CTWLanguageModel.h \
		DictLanguageModel.cpp \
		DictLanguageModel.h \
		HashTable.cpp \
		HashTable.h \
		LanguageModel.h \
		MixtureLanguageModel.h \
		PPMLanguageModel.cpp \
		PPMLanguageModel.h \
		PPMPYLanguageModel.cpp \
		PPMPYLanguageModel.h \
		RoutingPPMLanguageModel.cpp \
		RoutingPPMLanguageModel.h \
		WordLanguageModel.cpp \
		WordLanguageModel.h
