bin_PROGRAMS = LanguageModelling Phil

LanguageModelling_SOURCES = main.cpp
LanguageModelling_LDADD = ../../DasherCore/libdashercore.a ../../DasherCore/LanguageModelling/libdasherlm.a ../../DasherCore/Alphabet/libdasheralphabet.a

Phil_SOURCES = pjc51_main.cpp
Phil_LDADD = ../../DasherCore/libdashercore.a ../../DasherCore/LanguageModelling/libdasherlm.a ../../DasherCore/Alphabet/libdasheralphabet.a
