EXTRA_DIST = \
		dasher.traditional.glade \
		dasher.direct.glade \
		dasher.compose.glade \
		dasher.fullscreen.glade \
		dashermaemo.glade \
		dashermaemofullscreen.glade

pkgdata_DATA = \
		dasher.traditional.glade \
		dasher.direct.glade \
		dasher.compose.glade \
		dasher.fullscreen.glade \
		dashermaemo.glade \
		dashermaemofullscreen.glade
