noinst_LIBRARIES = libdasheralphabet.a
libdasheralphabet_a_SOURCES = AlphIO.cpp \
                              AlphIO.h \
                              Alphabet.cpp \
                              Alphabet.h \
                              AlphabetMap.cpp \
                              AlphabetMap.h \
                              GroupInfo.h
